--- a/templates/mps-control-daemon.tmpl.yaml
+++ b/templates/mps-control-daemon.tmpl.yaml
@@ -35,7 +35,7 @@ spec:
           echo set_default_active_thread_percentage {{.DefaultActiveThreadPercentage}} | nvidia-cuda-mps-control
           {{- end}}
           {{- range $id, $limit := .DefaultPinnedDeviceMemoryLimits }}
-          echo set_default_device_pinned_mem_limit {{ $id }} {{ $limit }} | nvidia-cuda-mps-control
+          echo set_default_device_pinned_mem_limit 0 {{ $limit }} | nvidia-cuda-mps-control
           {{- end}}
 
           echo "startup complete" > /var/log/nvidia-mps/startup.log
